test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-owned.good
init-var-nonnil-shared-from-oknil-owned.chpl:9: warning: assigning owned class to shared class is deprecated.
init-var-nonnil-shared-from-oknil-owned.chpl:9: error: invalid copy-initialization
init-var-nonnil-shared-from-oknil-owned.chpl:9: error: cannot initialize 'shared MyClass' from a 'owned MyClass?'
